# sci-all-stream-api

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml
migrations/2024-11-03-095217_init_db/: down.sql  up.sql
src/: broker.rs  main.rs  types.rs
src/dto/: stream.rs
src/persistance/: diesel_db_pool.rs  mod.rs  schema.rs
src/persistance/entities/: stream.rs
src/web/: stream_controller.rs
src/web/controllers/: stream_controller.rs
