[package]
name = "sci-all-streams-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["chrono"]}
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
lapin = "2.5.0"
futures = "0.3"
diesel_migrations = "2"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_mysql"]